crates/schema/tests/compile_fail/derive_reserved_key_invalid.stderr
error: reserved key `not a valid key` is not a valid schema field key (key must be ASCII alphanumeric or underscore)
 --> tests/compile_fail/derive_reserved_key_invalid.rs:6:19
  |
6 | #[schema(reserved("not a valid key"))]
  |                   ^^^^^^^^^^^^^^^^^

error[E0599]: no associated function or constant named `schema` found for struct `Bad` in the current scope
  --> tests/compile_fail/derive_reserved_key_invalid.rs:13:18
   |
 8 | struct Bad {
   | ---------- associated function or constant `schema` not found for this struct
...
13 |     let _ = Bad::schema();
   |                  ^^^^^^ associated function or constant not found in `Bad`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `schema`, perhaps you need to implement it:
           candidate #1: `HasSchema`
